--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,8 @@ bincode = "1.3.3"
 #chrono = "0.4.29"
 csv = "1.2.2"
 futures = "0.3"
+lopdf = { version = "0.31.0", features = ["pom", "pom_parser"] }
+ron = "0.8"
 rust_decimal = "1.32.0"
 serde = { version = "1.0.188", features = ["derive"] }
 sha256 = "1.4.0"
@@ -20,3 +22,4 @@ structopt = "0.3"
 time = { version = "0.3.28", features = ["serde", "parsing"] }
 tokio = { version = "1.20.0", features = ["rt", "macros"]}
 toml = "0.7.6"
+chrono = "0.4.30"
