--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,3 +23,5 @@ time = { version = "0.3.28", features = ["serde", "parsing"] }
 tokio = { version = "1.20.0", features = ["rt", "macros"]}
 toml = "0.7.6"
 chrono = "0.4.30"
+map-macro = "0.2.6"
+serde_json = "1.0.105"
